--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -9,13 +9,11 @@ on:
 jobs:
   build:
 
-
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        node-version: [16.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+        node-version: [18.x]
 
     steps:
     - uses: actions/checkout@v2
@@ -24,4 +22,5 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install
-    - run: npm start
+    - run: npm run build --if-present
+    - run: node main.js
